--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       <div class="col-md-4 col-sm-12 col-xs-12">
         <label>Meaning</label>
       <div id="result_text"></div>
+      <div id="result_accuracy"></div>
       <div id="result_icon"></div>
+      <div id="result_meaning"></div>
       </div>
 
 
@@ -57,7 +59,7 @@
       <label>Snapshot</label>
       <div id="result_image"></div>
 <br>
-      <button id="identify_image" onclick="identifyImage()">Identify Image</button>
+      <button id="identify_image" onclick="check()">Identify Image</button>
  
     </div>
       <script src="main.js"></script>
